<resources>
    <string name="app_name">LoginRegistrationApp</string>
    <string name="registration">Registration</string>
    <string name="full_name">Full Name</string>
    <string name="email">Email</string>
    <string name="mobile">Mobile</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="this_is_third_activity_after_successful_login">This is Third Activity, After successful login</string>
    <string name="login">Login</string>
    <string name="new_user_register_here">New User? Register Here</string>
</resources>
